# aoc

./: .gitignore  Pipfile  newday.sh  pyproject.toml
2019/: newday.sh
2019/d01/: d01.py
2020/d01/: d01.c  d01.py
2020/d02/: d02.c  d02.py
2020/d03/: d03.c  d03.py
2020/d04/: d04.000.py  d04.001.trim.py  d04.002.regexdebug.py  d04.003.regex.py  d04.005.lineregex.py  d04.006.splits.py  d04.py
2020/d05/: d05.py
2020/d06/: d06.000.py  d06.py
2020/d07/: d07.py  d07_solved.py
2020/d08/: d08.py
2020/d09/: d09.py
2020/d10/: d10.comp.py  d10.py
2020/d11/: d11.first.py  d11.py
2020/d12/: d12.first.py  d12.py  d12_first.py
2020/d13/: d13.py
2020/d14/: d14.py
2020/d15/: d15.py  d15_small.py
2020/d16/: d16.cleaned.py  d16.py  d16.regex.py
2020/d17/: d17.py  d17_0.py  d17_1.py
2020/d18/: d18.py  d18_night_of.py
2020/d19/: d19.py  d19_first.py
2020/d20/: d20.bak.py  d20.py  d20_first.py  d20_opt.py
2020/d22/: d22.py  d22.solved.py
2020/d23/: d23_class.py  d23_next.py  d23_preclass_bak.py  d23_solved.py
2020/d24/: d24.py
2020/d25/: d25.py  d25_solved.py  d25_template.py
2021/: aoc-input.py  template.py
2021/d01/: d01.00.py  d01.01.py
2021/d02/: d02.py
2021/d03/: d03.py
2021/d04/: d04.py
2021/d05/: d05.00.py  d05.01.py
2021/d06/: d06.py
2021/d07/: d07.00.py  d07.01.py
2021/d08/: d08.py
2021/d09/: d09.00.py
2021/d10/: d10.py
2021/d11/: d11.py
2021/d12/: d12.py  d12_01.py  d12_02.py  d12_03.py  d12_04.py
2021/d13/: d13.py
2021/d14/: d14.py
nrf52/: Makefile  advent.ld  run.c  startup.c
templates/: template.py
(+13 files in other folders)
